# arkdecompiler

./: .gitignore  .gitmodules  BUILD.gn  README.md  a  algos.cpp  algos.h  arkdemo.ast  arkdemo.ts  arkts.cpp  arkts.h  arktsgen.cpp  arktsgen.h  ast.cpp  ast.h  astgen.cpp  astgen.h  astgen_auxiins.cpp  astgen_ecma.inl  base.cpp  base.h  base.map  build.sh  case  classconstruction.cpp  classconstruction.h  complexstmt2body.h  demo.ts  er.nameu:q!  fundepscan.cpp  fundepscan.h  genlogs.sh  hot.sh  intrinsicid2name.h  intrinsicid2token.h  lca.cpp  lca.h  lexicalenv.cpp  lexicalenv.h  libpandabaseheaders.h  (+7 more)
autotests/: blacklist.txt  clean_build_fail_file.py  count_json_members.py  scantstests.py
autotests/status_outputs/: 0.json  2.json  3.json  res.json
autotests/tmp/: legacy-octal-escape.js
docker/: Dockerfile
patches/: .arkcompiler_runtime_core_a94c360.patch.swp  arkcompiler_ets_frontend_09e1955c6.patch  arkcompiler_runtime_core_a94c360.patch  third_party_protobuf_0e4c27.patch
scripts/: draw_cfg.py  intrinsic_list.txt  pickintrinsics.py  picktokens.py  prepare.sh  removebc.py  tokens.txt
tests/: 1.normal.ts  10.module.ts  11.generator.ts  12.iterator.ts  13.differentbranchcases.ts  14.phi.ts  15.sendable.ts  16.async.ts  17.template.ts  2.array_obj.ts  3.func.ts  4.if.ts  5.trycatch.ts  6.loop.ts  7.lexical.ts  8.class.ts  9.hotcompile.ts  misc.ts  simpledemo.ts
tmp/: a.json  a.py  b.json
